[workspace]
members = [
    "api",
    "common",
    "device",
    "proto",
    "transport",
    "wallet/coin-bitcoin",
    "wallet/coin-ethereum",
    "wallet/coin-eos",
    "wallet/coin-cosmos",
    "wallet/coin-ckb",
    "wallet/coin-substrate",
    "wallet/coin-tron",
    "wallet/coin-tezos",
    "wallet/coin-bch",
    "wallet/coin-filecoin",
    "wallet/coin-btc-fork",
]