[package]
name = "api"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = "1.4.0"

log = {version = "0.4", features = ["std"]}
# log-panics = {version = "2.0.0", features = ["with-backtrace"]}
#[target.'cfg(target_os = "android")'.dependencies]
#android_logger = "0.8.6"
mq = {path = "../mq"}
device = {path = "../device"}
coin-ethereum = {path = "../wallet/coin-ethereum"}
coin-bitcoin = {path = "../wallet/coin-bitcoin"}
coin-eos = {path = "../wallet/coin-eos"}
coin-cosmos = {path = "../wallet/coin-cosmos"}
bitcoin = "0.21.0"
ethereum-types = "0.6.0"
common = {path = "../common"}
prost = "0.5.0"
bytes = "0.4.12"
prost-types = "0.5.0"
hex = "0.3"
failure = "0.1.6"

[lib]
name="connector"
crate-type=["staticlib","cdylib"]