[package]
name = "common"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
hyper = "0.12.9"
hyper-tls = "0.3.2"
rustc-serialize = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.101"
serde_json = "1.0"
hex = "0.3"
futures = "0.1"
tokio-core = "0.1"
http = "0.1.20"
regex = "1"
ring = "0.16.9"
secp256k1 = "0.17.2"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
prost = "0.5.0"
bytes = "0.4.12"
prost-types = "0.5.0"

