[package]
name = "common"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
hyper-tls = "0.4.1"
rustc-serialize = "0.3.24"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
hex = "0.4.2"
tokio = { version = "0.2.21", features = ["rt-core"] }
regex = "1.3.7"
ring = "0.16.9"
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"
prost = "0.6.1"
bytes = "0.5.4"
prost-types = "0.6.1"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
failure = "0.1.8"
hyper-timeout = "0.3"
lazy_static = "1.3.0"
aes-ctr = "0.3.0"
aes-soft = "0.3.3"
block-modes = "0.3.3"
parking_lot = "0.10"