[package]
name = "connector"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = {version = "0.10.2", default-features = false}
# jni = { version = "0.13.1", features = ["invocation"] }
# jni = { version = "0.13.1", default-features = false }
# j4rs = "0.10.0"
# rjni = { git = "https://github.com/benanders/rjni" }
# rucaja = { git = "https://github.com/kud1ing/rucaja" }
# [profile.release]
# lto = true
# lazy_static = "1"
# jni-sys = "0.3.0"

[lib]
name="connector"
crate-type=["staticlib","cdylib"]