[package]
name = "device"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
transport = {path = "../transport"}
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
ring = "0.16.9"
base64 = "0.12.1"
aes-ctr = "0.3.0"
aes-soft = "0.3.3"
block-modes = "0.3.3"
hex-literal = "0.2.1"
hex = "0.4.2"
secp256k1 = {version ="0.17.2", features = ["rand"] }
rand = "0.6"
sha1 = "0.6.0"
rsa = "0.1.4"
lazy_static = "1.4.0"
regex = "1.3.7"
failure = "0.1.8"
log = {version = "0.4.8", features = ["std"]}
prost = "0.6.1"
prost-types = "0.6.1"
bytes = "0.5.4"
