[package]
name = "device"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
transport = {path = "../transport"}
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.88"
ring = "0.16.20"
base64 = "0.13.1"
aes-ctr = "0.6.0"
aes-soft = "0.6.4"
block-modes = "0.7.0"
hex = "0.4.3"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery", "rand-std"] }
rand = "0.8.5"
sha1 = "0.6.0"
rsa = "0.7.2"
lazy_static = "1.4.0"
regex = "1.7.0"
failure = "0.1.8"
log = {version = "0.4.17", features = ["std"]}
prost = "0.11.2"
prost-types = "0.11.2"
bytes = "1.3.0"
parking_lot = "0.12.1"
