[package]
name = "mq"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex = "0.3"
failure = "0.1.6"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
hidapi = "1.2.0"
