[package]
name = "proto"
version = "0.1.0"
authors = ["IMLXM <liuxm1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
bytes = "1.3.0"
prost-types = "0.5.0"

[lib]
name = "proto"

[build-dependencies]
prost-build = "0.6.1"