[package]
name = "transport"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.2"
failure = "0.1.8"
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
hidapi = "1.2.1"
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]