[package]
name = "coin-bitcoin"
version = "0.1.0"
authors = ["xiaoguang101010 <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin = "0.21.0"
hex = "0.4.2"
secp256k1 = "0.17.2"
ring = "0.16.9"
bitcoin_hashes = "0.7.3"
num-bigint = "0.2.6"
failure = "0.1.6"
bytes = "0.4.12"
prost = "0.5.0"
prost-types = "0.5.0"