[package]
name = "coin-bitcoin"
version = "0.1.0"
authors = ["xiaoguang101010 <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin = "0.25.0"
hex = "0.4.3"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
ring = "0.16.20"
bitcoin_hashes = "0.9.0"
num-bigint = "0.4.3"
failure = "0.1.8"
bytes = "1.3.0"
prost = "0.11.2"
prost-types = "0.11.2"