[package]
name = "coin-btc-fork"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}

bitcoin = "0.25.0"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.0"
bitcoinconsensus = { version = "0.16", optional = true }
failure = "0.1.5"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
bitcoin_hashes = "0.9.0"
num-bigint = "0.2.6"
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"
lazy_static = "1.4.0"
parking_lot = "0.10"
bech32 = "0.7.1"

