[package]
name = "coin-btc-fork"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}

bitcoin = "0.25.0"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
tiny-bip39 = "0.6.0"
#bitcoinconsensus = { version = "0.16", optional = true }
failure = "0.1.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
bitcoin_hashes = "0.9.0"
num-bigint = "0.2.6"
bytes = "1.3.0"
prost = "0.11.2"
prost-types = "0.11.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
bech32 = "0.7.1"
base64 = "0.13.1"

