[package]
name = "coin-ckb"
version = "0.1.0"
authors = ["xiemener <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
blake2b-rs = "0.1.5"
failure = "0.1.6"
bech32 = "0.7.1"
hex = "0.4.0"
byteorder = "1.3.2"
prost = "0.6.1"
lazy_static = "1.4.0"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
