[package]
name = "coin-ckb"
version = "0.1.0"
authors = ["xiemener <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
blake2b-rs = "0.2.0"
failure = "0.1.8"
bech32 = "0.9.1"
hex = "0.4.3"
byteorder = "1.4.3"
prost = "0.11.2"
lazy_static = "1.4.0"
secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
base64 = "0.13.1"
bitcoin = "0.29.2"