[package]
name = "coin-cosmos"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin_hashes = "0.7.3"
hex = "0.3.2"
bitcoin = "0.21.0"
secp256k1 = "0.19"
ring = "0.16.9"
#bech32 = "0.7.1"
bech32 = { git = "https://github.com/sipa/bech32" }
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = { version = "1.0.53", default-features = false, features = ["alloc"] }
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"
base64 = "0.12.1"
failure = "0.1.6"
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
hyper-timeout = "0.3.1"