[package]
name = "coin-cosmos"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin_hashes = "0.9.0"
hex = "0.4.3"
bitcoin = "0.25.0"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
ring = "0.16.20"
bech32 = { git = "https://github.com/sipa/bech32" }
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"] }
num-bigint = "0.4.3"
num-traits = "0.2.11"
num-integer = "0.1.42"
base64 = "0.13.1"
failure = "0.1.8"
bytes = "1.3.0"
prost = "0.11.2"
prost-types = "0.11.2"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }