[package]
name = "coin-eos"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
mq = {path = "../../mq"}
bitcoin_hashes = "0.7.3"
hex = "0.3.2"
bitcoin = "0.21.0"
failure = "0.1.6"
bytes = "0.4.8"
prost = "0.5.0"
prost-types = "0.5.0"