[package]
name = "coin-eos"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin_hashes = "0.7.3"
hex = "0.4.2"
bitcoin = "0.25.0"
failure = "0.1.8"
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"