[package]
name = "coin-eos"
version = "0.1.0"
authors = ["joe <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
bitcoin_hashes = "0.9.0"
hex = "0.4.3"
bitcoin = "0.25.0"
failure = "0.1.8"
bytes = "1.3.0"
prost = "0.11.2"
prost-types = "0.11.2"