[package]
name = "coin-ethereum"
version = "0.1.0"
authors = ["IMLXM <liuxm1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
rlp = "0.4.0"
secp256k1 = {version ="0.19", features = ["recovery"] }
ethereum-types = "0.6.0"
keccak-hash = "0.2.0"
lazy_static = "1.4.0"
rustc-hex = "2.1.0"
serde_json = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
reqwest = { version = "0.9.20", optional = false }
jsonrpc-core = "8.0"
dotenv = "0.9.0"
bitcoin = "0.21.0"
bitcoin_hashes = "0.7.3"
hex = "0.3"
regex = "1.3.7"
tiny-keccak = "1.4"
failure = "0.1.6"
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"