[package]
name = "coin-ethereum2"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
failure = "0.1.6"
hex = "0.3.2"
prost = "0.6.1"
prost-types = "0.6.1"