[package]
name = "coin-filecoin"
version = "0.1.0"
authors = ["wyoyw <wyoyw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}


bitcoin_hashes = "0.7.3"
hex = "0.3.2"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
ring = "0.16.9"
#bech32 = "0.7.1"
bech32 = { git = "https://github.com/sipa/bech32" }
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"
base64 = "0.12.1"
failure = "0.1.6"
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }

base32 = "^0.4.0"
blake2b-rs = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.0"

forest_vm = "0.2.1"
forest_message = "0.5.0"
forest_address = "0.2.3"
forest_encoding = "0.1.2"
forest_cid = "0.1.1"
num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}