[package]
name = "coin-substrate"
version = "0.1.0"
authors = ["xiemener <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
failure = "0.1.6"
sp-core = "2.0.0-rc3"
sp-runtime = "2.0.0-rc3"
hex = "0.3"
prost = "0.6.1"
prost-types = "0.6.1"