[package]
name = "coin-tezos"
version = "0.1.0"
authors = ["xiaoguang <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}

hex = "0.4.2"
blake2b_simd = "0.5.10"
bitcoin = "0.25.0"
failure = "0.1.6"
prost = "0.6.1"
prost-types = "0.6.1"