[package]
name = "coin-tron"
version = "0.1.0"
authors = ["xiemener <xielamenla@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keccak-hash = "0.2.0"
failure = "0.1.6"
bitcoin = "0.25.0"
hex = "0.3"
common = {path = "../../common"}
device = {path = "../../device"}
transport = {path = "../../transport"}
prost = "0.6.1"
secp256k1 = {version ="0.19.0", features = ["rand", "recovery"] }
tiny-keccak = "1.4"