[package]
name = "interface"
version = "0.1.0"
authors = ["IMLXM <liuxm1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../common"}
coin-ethereum = {path = "../coin-ethereum"}
ethereum-types = "0.6.0"
hex = "0.3" 